--- a/tm_inspect/CMakeLists.txt
+++ b/tm_inspect/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(ui_for_debug_and_demo)
+project(tm_inspect)
 
 # Default to C99
 if(NOT CMAKE_C_STANDARD)
