--- a/tm_moveit/tm12x_moveit_config/config/joint_limits_robot.yaml
+++ b/tm_moveit/tm12x_moveit_config/config/joint_limits_robot.yaml
@@ -10,31 +10,31 @@ default_acceleration_scaling_factor: 1.0
 joint_limits:
   joint_1:
     has_velocity_limits: true
-    max_velocity: 75.0
-    has_acceleration_limits: true
-    max_acceleration: 40.0
+    max_velocity: 2.0943951023931953
+    has_acceleration_limits: false
+    max_acceleration: 0
   joint_2:
     has_velocity_limits: true
-    max_velocity: 75.0
-    has_acceleration_limits: true
-    max_acceleration: 40.0
+    max_velocity: 2.0943951023931953
+    has_acceleration_limits: false
+    max_acceleration: 0
   joint_3:
     has_velocity_limits: true
-    max_velocity: 90.0
-    has_acceleration_limits: true
-    max_acceleration: 40.0
+    max_velocity: 3.1415926535897931
+    has_acceleration_limits: false
+    max_acceleration: 0
   joint_4:
     has_velocity_limits: true
-    max_velocity: 90.0
-    has_acceleration_limits: true
-    max_acceleration: 40.0
+    max_velocity: 3.1415926535897931
+    has_acceleration_limits: false
+    max_acceleration: 0
   joint_5:
     has_velocity_limits: true
-    max_velocity: 90.0
-    has_acceleration_limits: true
-    max_acceleration: 40.0
+    max_velocity: 3.1415926535897931
+    has_acceleration_limits: false
+    max_acceleration: 0
   joint_6:
     has_velocity_limits: true
-    max_velocity: 90.0
-    has_acceleration_limits: true
-    max_acceleration: 40.0
+    max_velocity: 3.1415926535897931
+    has_acceleration_limits: false
+    max_acceleration: 0
